--- a/runMeRunner/pom.xml
+++ b/runMeRunner/pom.xml
@@ -22,6 +22,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
       <groupId>de.htw.ai.kbe.de</groupId>
       <artifactId>PropsFileUtil</artifactId>
       <version>0.0.1-SNAPSHOT</version>
