--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -4,15 +4,14 @@
 
   <groupId>de.htw.ai.kbe</groupId>
   <artifactId>songsServlet</artifactId>
+  <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+ 
 
   <name>songsServlet</name>
+
   <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <dependencies>
   	<dependency>
@@ -35,6 +34,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
+			<version>5.0.1.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
 			<version>5.0.1.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
