--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -4,8 +4,9 @@
 
   <groupId>de.htw.ai.kbe</groupId>
   <artifactId>songsServlet</artifactId>
+  <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+
 
   <name>songsServlet</name>
   <url>http://maven.apache.org</url>
