--- a/songsServlet/src/main/webapp/WEB-INF/web.xml
+++ b/songsServlet/src/main/webapp/WEB-INF/web.xml
@@ -7,13 +7,13 @@
         <servlet-name>Songs Servlet</servlet-name>
         <servlet-class>de.htw.ai.kbe.songsServlet.SongsServlet</servlet-class>
         <init-param>
-            <param-name>signature</param-name>
-            <param-value>"Hello there!"</param-value>
+            <param-name>fileName</param-name>
+            <param-value>"songs.jason"</param-value>
         </init-param>
     </servlet>
     
     <servlet-mapping>
-		<servlet-name>songsServlet</servlet-name>
-		<url-pattern>/echo</url-pattern>
+		<servlet-name>Songs Servlet</servlet-name>
+		<url-pattern></url-pattern>
 	</servlet-mapping>
 </web-app>
