--- a/songsServlet/src/main/webapp/WEB-INF/web.xml
+++ b/songsServlet/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     </servlet>
     
     <servlet-mapping>
-		<servlet-name>songsServlet</servlet-name>
-		<url-pattern>/echo</url-pattern>
+		<servlet-name>Songs Servlet</servlet-name>
+		<url-pattern></url-pattern>
 	</servlet-mapping>
 </web-app>
