--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.2.4</version>
+		</dependency>
 	</dependencies>
   <build>
 		<finalName>songsServlet</finalName>
