--- a/songsRX/pom.xml
+++ b/songsRX/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	
+	 <!-- For tomcat8-maven-plugin -->
 	<repositories>
         <repository>
             <id>alfresco</id>
@@ -19,10 +20,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.htwBerlin.ai.kbe</groupId>
 	<artifactId>songsRX</artifactId>
-    <name>JAX-RS Songs Web Service</name>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
+	<name>JAX-RS Songs Web Service</name>
 	<url>http://maven.apache.org</url>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
@@ -60,26 +62,6 @@
             <version>2.26</version>
         </dependency>
         <dependency>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>jaxb2-maven-plugin</artifactId>
-			<version>2.3.1</version>
-		</dependency>
-		<dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -97,6 +79,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <!-- mvn tomcat8:run-war -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat8-maven-plugin</artifactId>
