--- a/songsRX/src/main/webapp/WEB-INF/web.xml
+++ b/songsRX/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,9 @@
     xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     id="WebApp_ID" version="2.5">
-  <display-name>SongRX</display-name>
+  <display-name>SongsRX</display-name>
   <servlet>
-    <servlet-name>jersey-serlvet</servlet-name>
+    <servlet-name>jersey-servlet</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
@@ -14,7 +14,7 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>songsRX</servlet-name>
+    <servlet-name>jersey-servlet</servlet-name>
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
 </web-app>
