--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -67,6 +67,11 @@
     		<artifactId>gson</artifactId>
     		<version>2.2.4</version>
 		</dependency>
+		<dependency>
+    		<groupId>de.htwBerlin.ai.kbe</groupId>
+    		<artifactId>jaxbJacksonExamples</artifactId>
+    		<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
   <build>
 		<finalName>songsServlet</finalName>
