--- a/songsRX/src/main/webapp/WEB-INF/web.xml
+++ b/songsRX/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,8 @@
     <servlet-name>jersey-servlet</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>de.htwBerlin.ai.kbe.services</param-value>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>de.htwBerlin.ai.kbe.config.ApplicationConfig</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
