--- a/songsRX/pom.xml
+++ b/songsRX/pom.xml
@@ -67,6 +67,21 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core	</artifactId>
+			<version>5.2.12.Final</version>
+		</dependency>
+        <dependency>
+    		<groupId>postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>9.1-901-1.jdbc4</version>
+		</dependency>
 	</dependencies>
 	<build>
         <finalName>${project.artifactId}</finalName>
