--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/usr/lib/jvm/java-8-oracle","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"/home/s0549218/Dokumente/GIT/KBE/SoSe18KBERLIN/songsRX","type":"PROJECT","hints":{"PROJECT_NAME":"songsRX"}},"de.htwBerlin.ai.kbe:songsRX:0.0.1"]]
+[[{"location":"/home/s0549218/Dokumente/GIT/KBE/SoSe18KBERLIN/songsRX","type":"PROJECT","hints":{"PROJECT_NAME":"songsRX"}},"de.htwBerlin.ai.kbe:songsRX:0.0.1"]]
